--- a/teht_b.html
+++ b/teht_b.html
@@ -18,19 +18,19 @@
 
         <form novalidate>
             Etunimi:
-            <input id="etunimi" type="text" name="Etunimi"><br>
+            <input type="text" name="Etunimi" required><br>
             Sukunimi:
-            <input id="sukunimi" type="text" name="Sukunimi"><br>
+            <input type="text" name="Sukunimi" required><br>
             E-mail:
-            <input id="email" type="text" name="E-mail"><br>
+            <input type="text" name="E-mail" required><br>
             Puhelin:
-            <input id="puhelin" type="text" name="Puhelin"><br>
+            <input type="text" name="Puhelin" required><br>
             Osoite:
-            <input id="osoite" type="text" name="Osoite"><br>
+            <input type="text" name="Osoite"><br>
             Postinumero:
-            <input id="posti" type="text" name="Postinumero"><br>
+            <input type="text" name="Postinumero"><br>
             Salasana:
-            <input id="salasana" type="password" name="Salasana"><br>
+            <input type="password" name="Salasana" required><br>
             <input id="sub" type="submit" name="Lähetä">
         </form>
 
