--- a/teht_a.html
+++ b/teht_a.html
@@ -16,7 +16,7 @@
     <body>
         <h1>Lomakkeen validointi HTML5</h1>
 
-        <form method="get" action="lomakeGET.php">
+        <form method="GET" action="lomakeGET.php">
             Etunimi:
             <input type="text" name="Etunimi" required><br>
             Sukunimi:
