--- a/teht_b.html
+++ b/teht_b.html
@@ -16,7 +16,7 @@
     <body>
         <h1>Lomakkeen validointi JavaScript</h1>
 
-        <form novalidate method="post" action="lomakePOST.php">
+        <form novalidate method="POST" action="lomakePOST.php">
             Etunimi:
             <input type="text" name="Etunimi" required><br>
             Sukunimi:
